# folio

./: .gitignore
client/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.svelte  App.tsx  app.css  index.css  types.ts
client/src/api/: bookmarkService.ts  pocketService.ts
client/src/components/: AddBookmarkModal.tsx  BookmarkTable.tsx  Navbar.tsx  PocketTable.tsx
client/src/components/ui/: alert.tsx  badge.tsx  button-variants.ts  button.tsx  table.tsx
client/src/lib/: AddBookmark.svelte  BookmarkControls.svelte  BookmarkManager.svelte  BookmarkService.ts  BookmarkStatus.svelte  BookmarkTable.svelte  DateFormatter.ts
client/src/types/: svelte.d.ts
server/: .env  Dockerfile  database.py  fly.toml  ingest_pocket_data.py  main.py  models.py  part_000000.csv  pyproject.toml  run.py  schemas.py  server.py  utils.py
